# AI_Recruitment-Staffing-Project

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 20250312_0853_4335279faa7c_initial_migration.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: applications.py  auth.py  blog_posts.py  candidates.py  contract_template.py  contracts.py  email_template.py  jobs.py  users.py
app/core/: config.py  security.py
app/db/: init_db.py
app/models/: models.py
app/services/: ai_service.py  contracts.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/applications/: ApplicationDetails.tsx  ApplicationList.tsx
frontend/src/components/auth/: Login.tsx  Register.tsx
frontend/src/components/blog_posts/: BlogDetail.tsx  BlogForm.tsx  ManageBlogs.tsx
frontend/src/components/contract_template/: ContractTemplateDetail.tsx  ContractTemplateForm.tsx  ManageContractTemplate.tsx
frontend/src/components/contracts/: ContractDetails.tsx  ContractList.tsx
frontend/src/components/dashboard/: AdminDashboard.tsx  CandidateDashboard.tsx  Dashboard.tsx  EmployerDashboard.tsx
frontend/src/components/home/: Home.tsx
frontend/src/components/jobs/: CreateJob.tsx  JobApplications.tsx  JobDetails.tsx  JobForm.tsx  JobList.tsx  ManageJobs.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/profile/: CandidateProfile.tsx  (+1 more)
frontend/src/services/: api.ts
frontend/src/utils/: navigation.ts
(+3 files in other folders)
