[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_recruitment"
version = "0.1"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "AI-powered recruitment platform"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["app"] 